--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.8.0",
-    "@parcel/transformer-typescript-tsc": "^2.8.0",
-    "@parcel/validator-typescript": "^2.8.0",
-    "parcel": "^2.8.0"
+    "@parcel/transformer-sass": "^2.8.3",
+    "@types/jest": "^29.4.0",
+    "jest": "^29.4.0",
+    "jest-environment-jsdom": "^29.4.0",
+    "parcel": "^2.8.3",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.4"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "verbose": true,
+    "testEnvironment": "node",
+    "collectCoverage": true,
+    "coverageReporters": ["html"]
   }
 }
